# ComfyUI-JH-XMP-Metadata-Nodes

./: README.md  __init__.py  jh_path_to_stem.py  jh_save_image_with_xmp_metadata.py  jh_save_png_with_xmp_metadata.py  jh_save_webp_with_xmp_metadata.py  jh_xmp_metadata.py  mock_folder_paths.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
comfyui_jh_xmp_metadata_nodes/: jh_format_civitai_metadata_node.py  jh_format_metadata_node.py  jh_get_widget_value_nodes.py  jh_load_image_with_xmp_metadata_node.py  jh_path_to_stem_node.py  jh_save_image_with_xmp_metadata_node.py  jh_types.py  jh_xmp_metadata.py
src/: any_type.py  jh_format_instructions_node.py  jh_get_widget_value_node.py  jh_get_widget_value_nodes.py  jh_load_image_with_xmp_metadata_node.py  jh_path_to_stem.py  jh_path_to_stem_node.py  jh_save_image_with_xmp_metadata_node.py  jh_xmp_metadata.py
tests/: jh_format_instructions_node_test.py  jh_get_widget_value_nodes_test.py  jh_load_image_with_xmp_metadata_node_test.py  jh_save_image_with_xmp_metadata_node_test.py  jh_xmp_metadata_test.py  test_any_type.py  test_jh_format_civitai_metadata_node.py  test_jh_format_instructions_node.py  test_jh_format_metadata_node.py  test_jh_get_widget_value_nodes.py  test_jh_load_image_with_xmp_metadata_node.py  test_jh_path_to_stem.py  test_jh_path_to_stem_node.py  test_jh_save_image_with_xmp_metadata_node.py  test_jh_xmp_metadata.py
