[tool.poetry]
name = "comfyui-jh-xmp-metadata-nodes"
version = "0.1.0"
description = "Custom nodes for ComfyUI for reading and writing XMP metadata"
authors = ["Jeffery Harrell <jefferyharrell@gmail.com>"]
readme = "README.md"
license = "GPL-3.0-only"

[tool.poetry.dependencies]
python = "^3.12"
lxml = "^5.3.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
numpy = "<2.0.0"
torch = "^2.5.1"
pillow = "^11.0.0"
types-lxml = "^2024.12.13"
pytest-mock = "^3.14.0"


[tool.poetry.group.interactive.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry-auto-export.exports]]
output = "requirements.txt"
without_hashes = true
without = ["dev"]

[[tool.poetry-auto-export.exports]]
output = "requirements-dev.txt"
without_hashes = true
only = ["dev"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "A", "ANN", "RUF"]
fixable = ["ALL"]

[tool.ruff.format]
docstring-code-format = true

[tool.pytest.ini_options]
addopts = "-p mock_folder_paths"
