[tool.poetry]
name = "comfyui-jh-xmp-metadata-nodes"
version = "0.1.0"
description = "Custom nodes for ComfyUI for reading and writing XMP metadata"
authors = ["Jeffery Harrell <jefferyharrell@gmail.com>"]
readme = "README.md"
license = "GPL-3.0-only"

[tool.poetry.dependencies]
python = "^3.12"
lxml = "^5.3.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
numpy = "<2.0.0"
torch = {version = "^2.5.1+cpu", source = "torch-cpu"}
pillow = "^11.0.0"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
pytest-mock = "^3.14.0"

[tool.poetry.group.interactive]
optional = true

[tool.poetry.group.interactive.dependencies]
ipykernel = "^6.29.5"


[[tool.poetry.source]]
name = "torch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry-auto-export.exports]]
output = "requirements.txt"
without_hashes = true
without = ["dev"]

[[tool.poetry-auto-export.exports]]
output = "requirements-dev.txt"
without_hashes = true
with = ["dev"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "A", "ANN", "RUF"]
fixable = ["ALL"]

[tool.ruff.format]
docstring-code-format = true

[tool.pytest.ini_options]
addopts = "-p mock_folder_paths"
